Simplify factory