@@ -3,7 +3,6 @@ package com.salesforce.tests.fs.factory;
 import com.salesforce.tests.fs.model.command.*;
 import com.salesforce.tests.fs.model.directory.Directory;
 
-import java.lang.reflect.Constructor;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -11,13 +10,18 @@ import java.util.Map;
 
 public class CommandsFactory {
 
-    Map<String, Class<?>> commandsByString;
+    private final Map<String, Class<?>> commandsByString = new HashMap<String, Class<?>>() {{
+            put("quit", QuitCommand.class);
+            put("pwd", PwdCommand.class);
+            put("ls", LsCommand.class);
+            put("mkdir", MkdirCommand.class);
+            put("cd", ChangeDirectoryCommand.class);
+            put("touch", TouchCommand.class);
+    }};
 
     public List<Command> build(List<String> inputs) {
-        initMap();
-        Directory directory = createFolder();
-
         List<Command> commands = new ArrayList<>();
+        Directory directory = new Directory("root");
 
         inputs.forEach(input -> {
             String[] parsedInputs = input.split(" ");
@@ -25,8 +29,7 @@ public class CommandsFactory {
             Command command;
             Class<?> c = commandsByString.getOrDefault(parsedInputs[0], UnrecognizedCommand.class);
             try {
-                Constructor<?> cons = c.getConstructor();
-                command = (Command) cons.newInstance();
+                command = (Command) c.getConstructor().newInstance();
             } catch (Exception e) {
                 command = new UnrecognizedCommand();
             }
@@ -38,19 +41,5 @@ public class CommandsFactory {
         });
 
         return commands;
-    }
-
-    private Directory createFolder() {
-        return new Directory("root");
-    }
-
-    private void initMap() {
-        commandsByString = new HashMap<>();
-        commandsByString.put("quit", QuitCommand.class);
-        commandsByString.put("pwd", PwdCommand.class);
-        commandsByString.put("ls", LsCommand.class);
-        commandsByString.put("mkdir", MkdirCommand.class);
-        commandsByString.put("cd", ChangeDirectoryCommand.class);
-        commandsByString.put("touch", TouchCommand.class);
     }
 }
